# targeted-unlearning

./: .gitignore  Continued_sprint_plan.docx  README.md  ROME2.ipynb  pyproject.toml  rome_baseline_gpt2xl.json  rome_baseline_qwen3_0.6B.json
.claude/: settings.local.json
baselines/: LoRA_Baseline.ipynb  ROME-MEMIT.ipynb  lora_10step_harness.json  lora_1step_harness.json  lora_5step_harness.json  memit_full_metrics.json  rome_full_metrics.json  week3_harness_output_with_baselines.json  week3_harness_output_with_baselines_v2.json
baselines/gpt2/: AlphaEdit_GPT2XL.ipynb  ITI_Baseline_GPT2XL.ipynb  LoRA_GPT2XL.ipynb  MEMIT_GPT2XL.ipynb  ROME2.ipynb
baselines/qwen/: LoRA_Baseline.ipynb
circuit_pipeline/: Notebook1_ACDC.ipynb  Notebook2_Ablation.ipynb  README.md
circuit_pipeline/notebooks/: Notebook10_Competition_Law.ipynb  Notebook11_Empty_Edit_Control.ipynb  Notebook12_Circuit_Overlap.ipynb  Notebook13_Edit_Magnitude.ipynb  Notebook14_Cross_Scale_GPT2XL.ipynb  Notebook15_LoRA_Control.ipynb  Notebook16_Gradient_Dynamics.ipynb  Notebook17_Cosine_Geometry.ipynb  Notebook18_Residual_Direction.ipynb  Notebook19_Activation_Patching.ipynb  Notebook1_v2_1_ACDC.ipynb  Notebook1_v2_2_ACDC.ipynb  Notebook3_v2_KL_Stabilization.ipynb  Notebook4_v2_Circuit_Comparison.ipynb  Notebook5_Sequential_Editing_v3.ipynb  Notebook6_Diagnostic_Analysis.ipynb  Notebook7_Circuit_Relocation.ipynb  Notebook8_Beta_KL_Ablation.ipynb
metrics_harness/: Notebook_B1_Metrics_Harness_Week1.ipynb  Notebook_B_Evaluation_Harness.ipynb  README.md  harness_functions.py  results_skeleton.md
(+94 files in other folders)
